Add 2 New Recipes and expanded description on B&B
Added 2 new Recipes called Milksteak and 5$
Milkshake as well as adding more href's in the
index as well for better connectivity

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/Bell Peppers and Beef.html">Bell Peppers and Beef</a>
+    <p><a href="./recipes/Bell Peppers and Beef.html">Bell Peppers and Beef</a></p>
+    <p><a href="./recipes/Milksteak.html">Milksteak</a></p>
+    <p><a href="./recipes/5$-Milkshake.html">5$ Milkshake</a></p>
 </body>
 </html>
