--- a/recipes/Bell Peppers and Beef.html
+++ b/recipes/Bell Peppers and Beef.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Bell Peppers and Beef</h1>
-    <a href="../index.html">Home</a>
+
+    <img src="../img/B&B.webp" alt="Bell Pepper and Beef from Cowboy Bebop">
+
+    <p>Here we have the Bell Pepper and Beef Dish from Cowboy Bebop, a simple but delicious dish.</p>
+
+    <p><a href="../index.html">Home</a></p>
 </body>
 </html>
